# IReflx

./: CMakeLists.txt  README.md
IReflx/: CMakeLists.txt
IReflx/include/IReflx/: CommandLineParser.h  IStarReflextor.h
IReflx/src/: BaseIOInterface.h  CommandLineParser.cpp  GmtiReader.h  IStarReflextor.cpp  QueueType.h  SourceReader.cpp  SourceReader.h  StdinReader.h  UdpListener.cpp  UdpListener.h  UdpSender.cpp  UdpSender.h
cmake/: VersionResource.rc
